# ECS235B-analyzer

./: .gitignore  README.md  analyzer.py  cli.py  dangerous_functionsfinal_database.csv  dangerous_functionsfinal_database.csv.xlsx  pyproject.toml  test.cpp
src/parser/: parser.py
src/rules/: buffer_overflow.py  dangerous_functions.py  dangerous_functionsfinal_database.csv  function_summary.py  memory_leak.py  null_dereference.py  rule.py  symbolic_div_zero.py  symbolic_null_deref.py  symbolic_out_of_bounds.py  tainted_data.py  uninitialized_var.py  unused_var.py
src/symbolic/: symbolic_executor.py
tests/fixtures/: buffer_overflow_cases.cpp  interprocedural_leak.cpp  memory_leak_cases.cpp  no_issues.cpp  null_dereference.cpp  resource_leaks.cpp  tainted_argv.cpp  tainted_sources.cpp  test.cpp  test_if_while.cpp  test_symbolic.cpp  testcsv.cpp  unsafe_buffer_ops.cpp  unused_var.cpp
tests/fixtures/nested/: more_unsafe.cpp
tests/fixtures/unused/: unused_var_basic.cpp  unused_var_functions.cpp  unused_var_no_issues.cpp  unused_var_scope.cpp
